--- a/config_example.json
+++ b/config_example.json
@@ -7,6 +7,7 @@
   "VIDEO": {
     "BV": "BV1uv411q7Mv",
     "able_subcomment": true,
+    "able_printcomment": true,
     "BlackList": "巨婴,脑残,用英文逗号隔开关键字"
   }
 }
