add: 默认关闭删除功能，操作过于危险

--- a/config_example.json
+++ b/config_example.json
@@ -7,12 +7,14 @@
   "VIDEOS": [
     {
       "BV": "BV1uv411q7Mv",
+      "able_delete": false,
       "able_subcomment": true,
       "able_printcomment": true,
       "BlackList": "巨婴,脑残,用英文逗号隔开关键字"
     },
     {
       "BV": "BV1uv411q7Mv",
+      "able_delete": false,
       "able_subcomment": true,
       "able_printcomment": true,
       "BlackList": "巨婴,脑残,用英文逗号隔开关键字"
