--- a/config_example.json
+++ b/config_example.json
@@ -10,14 +10,16 @@
       "able_delete": false,
       "able_subcomment": true,
       "able_printcomment": true,
-      "BlackList": "巨婴,脑残,用英文逗号隔开关键字"
+      "BlackList": "巨婴,脑残,用英文逗号隔开关键字",
+      "WhiteList": "太牛了"
     },
     {
       "BV": "BV1uv411q7Mv",
       "able_delete": false,
       "able_subcomment": true,
       "able_printcomment": true,
-      "BlackList": "巨婴,脑残,用英文逗号隔开关键字"
+      "BlackList": "巨婴,脑残,用英文逗号隔开关键字",
+      "WhiteList": "太牛了"
     }
   ]
 }
